src/styles/archive/projectView.module.css
.articleRoot {
    max-width: 82ch;
    margin: 0 auto;
    line-height: 1.65;
    padding: 16px 20px 40px;
}

@property --frost {
    syntax: "<number>";
    inherits: false;
    initial-value: 0;
}

.articleRoot {
    overflow: auto;
    scroll-timeline-name: --pv;
    scroll-timeline-axis: block;
}

.articleHeader {
    position: sticky;
    display: grid;
    /* grid-template-columns: 1fr auto 1fr; */
    grid-template-columns: max-content 1fr max-content;
    /* left | center | right */

    align-items: center;
    gap: 8px;
    top: 0;
    z-index: 2;
    padding: 0.5rem;
    isolation: isolate;
    background: color-mix(in oklab,
            var(--color-background) calc(100% - 30% * var(--frost)),
            transparent);
    border-bottom: 1px solid rgba(var(--color-foreground-rgb), .10);


    backdrop-filter: saturate(180%) blur(calc(22px * var(--frost)));
    -webkit-backdrop-filter: saturate(180%) blur(calc(22px * var(--frost)));

    animation-timeline: --pv;
    animation-range: 0 120px;
    animation-name: headerFrostProgress;
    animation-fill-mode: both;
    animation-duration: 1s;
}

@keyframes headerFrostProgress {
    0% {
        --frost: 0;
    }

    100% {
        --frost: 1;
    }
}

.articleHeader::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 1px;
    background: color-mix(in oklab, var(--color-foreground) 12%, transparent);
    opacity: var(--frost);
    pointer-events: none;
}

.headerLeft {
    justify-self: start;
}

.headerRight {
    justify-self: end;
}

.headerLeft,
.headerRight {
    min-width: 0;
}

.backBtn {
    display: inline-flex;
    align-items: center;
    gap: 6px;
    white-space: nowrap;
    line-height: 1;
    padding: 6px 10px;
    min-width: fit-content;
}

.backBtn>svg,
.catChevron {
    width: auto;
    height: auto;
    display: block;
    flex: 0 0 auto;
}

.backBtn,
.paneToggle {
    appearance: none;
    border: none;
    font-size: var(--font-sm);
    cursor: pointer;
    background: none;
}

.title {
    font-size: clamp(10px, 2.2vw, var(--font-sm));
    line-height: 1.2;
    margin: 0;
    text-align: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    justify-self: center;
}

.hero {
    margin: 12px 0 8px;
}

.heroImg {
    width: 100%;
    height: auto;
    border-radius: var(--radius-sm);
    display: block;
}

.body {
    margin-top: 8px;
}

.gallery {
    display: grid;
    grid-template-columns: 1fr;
    gap: 12px;
    margin-top: 16px;
}

.galleryItem {
    overflow: hidden;
    border-radius: var(--radius-sm);
}

.galleryImage {
    width: 100%;
    height: auto;
    display: block;
}

.tags {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    margin-top: 16px;
}

.tag {
    border: 1px solid rgba(var(--color-foreground-rgb), .15);
    border-radius: 999px;
    padding: 2px 8px;
    font-size: var(--font-xxs);
}

